# proj_2

./: Astar.cpp  Astar.h  BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  Compare.h  DFS.cpp  DFS.h  Experiment.h  FileCachManager.cpp  FileCachManager.h  FileCacheManager.h  ISearchable.h  ISearcher.h  Main.cpp  Main.h  MatrixClientHandler.h  MatrixSearchable.cpp  MatrixSearchable.h  MatrixSolver.h  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MyPriorityQueue.cpp  MyPriorityQueue.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Problem.cpp  Problem.h  Searchable.h  Searcher.cpp  Searcher.h  Server.h  Solution.cpp  (+10 more)
